@@ -16,11 +16,20 @@ class ATLanguage(object):
 
     def get_language(self):
         language = self.context.Language()
-        portal_factory = getToolByName(self, 'portal_factory', None)
-        if portal_factory is not None and portal_factory.isTemporary(self):
-            navroot = getNavigationRootObject(self.context, getSite())
+        portal_factory = getToolByName(self.context, 'portal_factory', None)
+        if portal_factory is not None and portal_factory.isTemporary(self.context):
+            # This should probably be fixed in plone.app.layout getNavigationRootObject
+            # Right now navigation root of a temporary object is Plone site due to acquisition
+            # https://github.com/plone/plone.app.layout/issues/57
+            context = self.context.aq_parent.aq_parent.aq_parent
+            navroot = getNavigationRootObject(context, getSite())
             if navroot != self.context:
-                language = ILanguage(navroot).get_language()
+                try:
+                    lang_info = ILanguage(navroot)
+                    language = lang_info.get_language()
+                except TypeError:
+                    # I can still reach this point when translating items outside language folders
+                    language = None
         if not language:
             language = LANGUAGE_INDEPENDENT
         return language
@@ -29,3 +38,4 @@ class ATLanguage(object):
         # Override the setLanguage method imposed by LP
         # and access to the direct mutator of the object
         self.context.getField('language').set(self.context, language)
+        self.context.reindexObject(idxs=['Language'])
