@@ -4,6 +4,9 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
+- The ``ILanguage`` implementation for Archetypes was broken. This close #13.
+  [keul]
+
 - Add tests when content is added with portal_factory (old way)
   [bsuttor]
 
